# Copyright (C) 2024 NeoTerm

# This file is part of neoterm-elf-cleaner.

# neoterm-elf-cleaner is free software: you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# neoterm-elf-cleaner is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with neoterm-elf-cleaner.  If not, see
# <https://www.gnu.org/licenses/>.

SUBDIRS = tests
AM_CXXFLAGS = -std=c++20 -Wall -Wextra -pedantic -pthread

bin_PROGRAMS = neoterm-elf-cleaner

neoterm_elf_cleaner_SOURCES = elf-cleaner.cpp arghandling.c
